kustomizations/services/app-conveyor/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-conveyor
spec:
  selector:
    app: app-conveyor
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
