kustomizations/services/app-conveyor/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-conveyor
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-elife-oauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: "${hostname}"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-conveyor
                port:
                  number: 80
  tls:
    - secretName: app-conveyor-tls
      hosts:
        - "${hostname}"
